crates/tree-sitter-resin/test/corpus/results.txt
==================
Structs, aliases, unions, and Err wrappers
==================
struct SomeInt { value: int; }
struct NoneInt {}
type OptionInt = SomeInt | NoneInt;
fn read(value: (int | Err<NoneInt>)) -> (int | Err<_>)  {
    let mut n = value?;
    (n)
}
---

(source_file
  (struct_definition
    (uid)
    (declare
      (lid)
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (builtin_type))))))))
  (struct_definition
    (uid))
  (type_definition
    (type_define
      (uid)
      (type
        (infix_type
          (union_type
            (union_type
              (unary_type
                (primary_type
                  (uid))))
            (unary_type
              (primary_type
                (uid))))))))
  (function_definition
    (lid)
    (declare
      (lid)
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (closed_type
                  (paren_type
                    (type
                      (infix_type
                        (union_type
                          (union_type
                            (unary_type
                              (primary_type
                                (builtin_type))))
                          (unary_type
                            (type
                              (infix_type
                                (union_type
                                  (unary_type
                                    (primary_type
                                      (uid))))))))))))))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (closed_type
                (paren_type
                  (type
                    (infix_type
                      (union_type
                        (union_type
                          (unary_type
                            (primary_type
                              (builtin_type))))
                        (unary_type
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (primary_type
                                    (inferred_type)))))))))))))))))
    (block_body
      (statement
        (define
          (local_define
            (lid)
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (lid))
                      (try_suffix)))))))))
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (closed_term
                    (paren_term
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (lid))))))))))))))))))

==================
Match arms and chained propagation
==================
fn nested(value: ((int | Err<Never>) | Err<Never>)) -> (int | Err<Never>)  {
    match (value) {
        int(inner) => { (inner?) },
        Err(error) => { Err(error) },
    }
}
---

(source_file
  (function_definition
    (lid)
    (declare
      (lid)
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (closed_type
                  (paren_type
                    (type
                      (infix_type
                        (union_type
                          (union_type
                            (unary_type
                              (primary_type
                                (closed_type
                                  (paren_type
                                    (type
                                      (infix_type
                                        (union_type
                                          (union_type
                                            (unary_type
                                              (primary_type
                                                (builtin_type))))
                                          (unary_type
                                            (type
                                              (infix_type
                                                (union_type
                                                  (unary_type
                                                    (primary_type
                                                      (builtin_type)))))))))))))))
                          (unary_type
                            (type
                              (infix_type
                                (union_type
                                  (unary_type
                                    (primary_type
                                      (builtin_type))))))))))))))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (closed_type
                (paren_type
                  (type
                    (infix_type
                      (union_type
                        (union_type
                          (unary_type
                            (primary_type
                              (builtin_type))))
                        (unary_type
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (primary_type
                                    (builtin_type)))))))))))))))))
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (match_term
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (lid)))))))
                    (match_arm
                      (type
                        (infix_type
                          (union_type
                            (unary_type
                              (primary_type
                                (builtin_type))))))
                      (lid)
                      (block_body
                        (term
                          (assignment_term
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (closed_term
                                      (paren_term
                                        (term
                                          (assignment_term
                                            (binary_term
                                              (unary_term
                                                (postfix_term
                                                  (primary_term
                                                    (lid))
                                                  (try_suffix))))))))))))))))
                    (match_arm
                      (lid)
                      (block_body
                        (term
                          (assignment_term
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (error_term
                                      (term
                                        (assignment_term
                                          (binary_term
                                            (unary_term
                                              (postfix_term
                                                (primary_term
                                                  (lid))))))))))))))))))))))))))
