crates/tree-sitter-resin/test/corpus/shaders.txt
==================
Shader decorator and function reference
==================

@compute_shader
def kernel(i: uint) -> uint = { i };
def main() = { var entry = kernel; };

---

(source_file
  (function_definition
    (decorator
      (lid))
    (lid)
    (declare
      (lid)
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (builtin_type)))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (builtin_type))))))
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (lid)))))))))
  (function_definition
    (lid)
    (block_body
      (statement
        (define
          (local_define
            (lid)
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (lid)))))))))))))
