crates/tree-sitter-resin/test/corpus/shared.txt
==================
Inherent destruction and shared ownership
==================

struct Item { value: int,
    def drop(self: Ptr<Item>) = {};
};

def main() = {
    var owner = ArcPtr<Item>.alloc(Item { value = 42 })?;
    var weak: WeakPtr<Item>;
    weak := owner.downgrade();
    var maybe: ArcPtr<Item> | None;
    maybe := weak.upgrade();
    match (maybe) {
        ArcPtr<Item>(item) => { item.get().value; },
        None => {},
    };
};

---

(source_file
  (struct_definition
    (uid)
    (declare
      (lid)
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (builtin_type)))))))
    (function_definition
      (lid)
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (type
                  (infix_type
                    (union_type
                      (unary_type
                        (primary_type
                          (uid)))))))))))
      (block_body)))
  (function_definition
    (lid)
    (block_body
      (statement
        (define
          (term_define
            (lid)
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (unary_type
                          (uid)
                          (type_arguments
                            (type
                              (infix_type
                                (union_type
                                  (unary_type
                                    (primary_type
                                      (uid)))))))))
                      (method_call
                        (lid)
                        (arguments
                          (term
                            (assignment_term
                              (binary_term
                                (unary_term
                                  (postfix_term
                                    (primary_term
                                      (constructor_term
                                        (unary_type
                                          (primary_type
                                            (uid)))
                                        (record_term
                                          (term_define
                                            (lid)
                                            (term
                                              (assignment_term
                                                (binary_term
                                                  (unary_term
                                                    (postfix_term
                                                      (primary_term
                                                        (number))))))))))))))))))
                      (try_suffix)))))))))
      (statement
        (declare
          (lid)
          (type
            (infix_type
              (union_type
                (unary_type
                  (uid)
                  (type_arguments
                    (type
                      (infix_type
                        (union_type
                          (unary_type
                            (primary_type
                              (uid)))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid)))))
            (assignment_term
              (binary_term
                (unary_term
                  (postfix_term
                    (primary_term
                      (lid))
                    (method_call
                      (lid)
                      (arguments)))))))))
      (statement
        (declare
          (lid)
          (type
            (infix_type
              (union_type
                (union_type
                  (unary_type
                    (uid)
                    (type_arguments
                      (type
                        (infix_type
                          (union_type
                            (unary_type
                              (primary_type
                                (uid)))))))))
                (unary_type
                  (primary_type
                    (builtin_type))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid)))))
            (assignment_term
              (binary_term
                (unary_term
                  (postfix_term
                    (primary_term
                      (lid))
                    (method_call
                      (lid)
                      (arguments)))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (match_term
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (lid)))))))
                      (match_arm
                        (type
                          (infix_type
                            (union_type
                              (unary_type
                                (uid)
                                (type_arguments
                                  (type
                                    (infix_type
                                      (union_type
                                        (unary_type
                                          (primary_type
                                            (uid)))))))))))
                        (lid)
                        (block_body
                          (statement
                            (term
                              (assignment_term
                                (binary_term
                                  (unary_term
                                    (postfix_term
                                      (primary_term
                                        (lid))
                                      (method_call
                                        (lid)
                                        (arguments))
                                      (field_access
                                        (lid))))))))))
                      (match_arm
                        (block_body)))))))))))))
