crates/tree-sitter-resin/test/corpus/templates.txt
==================
Type binders and explicit function and method applications
==================
struct Pair<T> {
    first: T;
    
}
fn map<T, U>(self: Pair<T>, value: U) -> Pair<U>  { Pair<U> { first = value } }

type Shared<T> = ArcPtr<Pair<T>>;
fn identity<T>(value: T) -> _  { value }
fn example()  {
    let mut f = identity::<Ptr<int>>;
    let mut output = gpu:alloc::<Pair<int>>(4);
    create::<int, long>(1);
    identity::<int>(1) < 2;
}
---

(source_file
  (struct_definition
    (uid)
    (type_parameters
      (uid))
    (declare
      (lid)
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (uid)))))))
    (function_definition
      (lid)
      (type_parameters
        (uid))
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (uid)
                (type_arguments
                  (type
                    (infix_type
                      (union_type
                        (unary_type
                          (primary_type
                            (uid))))))))))))
      (declare
        (lid)
        (type
          (infix_type
            (union_type
              (unary_type
                (primary_type
                  (uid)))))))
      (type
        (infix_type
          (union_type
            (unary_type
              (uid)
              (type_arguments
                (type
                  (infix_type
                    (union_type
                      (unary_type
                        (primary_type
                          (uid)))))))))))
      (block_body
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (constructor_term
                      (unary_type
                        (uid)
                        (type_arguments
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (primary_type
                                    (uid))))))))
                      (record_term
                        (term_define
                          (lid)
                          (term
                            (assignment_term
                              (binary_term
                                (unary_term
                                  (postfix_term
                                    (primary_term
                                      (lid)))))))))))))))))))
  (type_definition
    (type_define
      (uid)
      (type_parameters
        (uid))
      (type
        (infix_type
          (union_type
            (unary_type
              (uid)
              (type_arguments
                (type
                  (infix_type
                    (union_type
                      (unary_type
                        (uid)
                        (type_arguments
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (primary_type
                                    (uid))))))))))))))))))
  (function_definition
    (lid)
    (type_parameters
      (uid))
    (declare
      (lid)
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (uid)))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (inferred_type))))))
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (lid)))))))))
  (function_definition
    (lid)
    (block_body
      (statement
        (define
          (local_define
            (lid)
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (lid))
                      (type_application
                        (type_arguments
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (type
                                    (infix_type
                                      (union_type
                                        (unary_type
                                          (primary_type
                                            (builtin_type))))))))))))))))))))
      (statement
        (define
          (local_define
            (lid)
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (lid))
                      (method_call
                        (lid)
                        (type_application
                          (type_arguments
                            (type
                              (infix_type
                                (union_type
                                  (unary_type
                                    (uid)
                                    (type_arguments
                                      (type
                                        (infix_type
                                          (union_type
                                            (unary_type
                                              (primary_type
                                                (builtin_type)))))))))))))
                        (arguments
                          (term
                            (assignment_term
                              (binary_term
                                (unary_term
                                  (postfix_term
                                    (primary_term
                                      (number)))))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (unary_type
                      (uid)
                      (type_arguments
                        (type
                          (infix_type
                            (union_type
                              (unary_type
                                (primary_type
                                  (builtin_type)))))))))
                  (method_call
                    (lid)
                    (type_application
                      (type_arguments
                        (type
                          (infix_type
                            (union_type
                              (unary_type
                                (primary_type
                                  (builtin_type))))))))
                    (arguments
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (number)))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (binary_term
                (unary_term
                  (postfix_term
                    (primary_term
                      (lid))
                    (type_application
                      (type_arguments
                        (type
                          (infix_type
                            (union_type
                              (unary_type
                                (primary_type
                                  (builtin_type))))))))
                    (arguments
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (number)))))))))))
              (binary_term
                (unary_term
                  (postfix_term
                    (primary_term
                      (number))))))))))))
